Opened 6 months ago

Closed 6 months ago

#18957 closed bug (fixed)

wifi lost connection and can`t reconnect when it rettry

Reported by: cmkat Owned by: waddlesplash
Priority: normal Milestone: R1/beta5
Component: Drivers/Network/atheroswifi Version: R1/beta4
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Hello, my haiku lost the connection to the internet with my atheroswifi modem when past at least 1 hr or 2, then i should reboot or it will never reconnect again

Version: hrev57874

Hardware: Acer Aspire V5 Mini E-Series 2 cores 1ghz speed 4gb ram

~> listdev 

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1510: Family 14h Processor Root Complex

device Display controller (VGA compatible controller, VGA controller) [3|0|0]
  vendor 1002: Advanced Micro Devices, Inc. [AMD/ATI]
  device 980a: Wrestler [Radeon HD 7290]

device Multimedia controller (Audio device) [4|3|0]
  vendor 1002: Advanced Micro Devices, Inc. [AMD/ATI]
  device 1314: Wrestler HDMI Audio

device Bridge (PCI bridge, Normal decode) [6|4|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1512: Family 14h Processor Root Port

device Network controller (Ethernet controller) [2|0|0]
  vendor 10ec: Realtek Semiconductor Co., Ltd.
  device 8136: RTL810xE PCI Express Fast Ethernet controller

device Bridge (PCI bridge, Normal decode) [6|4|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1513: Family 14h Processor Root Port

device Network controller [2|80|0]
  vendor 168c: Qualcomm Atheros
  device 0032: AR9485 Wireless Network Adapter

device Serial bus controller (USB controller, XHCI) [c|3|30]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7812: FCH USB XHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

      device Human Interface Device (Boot Interface Subclass, Mouse) [3|1|2]
        vendor 046d: Logitech, Inc.
        device c077: Mouse

device Mass storage controller (SATA controller, AHCI 1.0) [1|6|1]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7801: FCH SATA Controller [AHCI mode]

device Serial bus controller (USB controller, OHCI) [c|3|10]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7807: FCH USB OHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

device Serial bus controller (USB controller, EHCI) [c|3|20]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7808: FCH USB EHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

device Serial bus controller (USB controller, OHCI) [c|3|10]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7807: FCH USB OHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

device Serial bus controller (USB controller, EHCI) [c|3|20]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7808: FCH USB EHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

      device Video (Video Streaming) [e|2|0]
        vendor 064e: Suyin Corp.
        device e330: Unknown

device Serial bus controller (SMBus) [c|5|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 780b: FCH SMBus Controller

device Multimedia controller (Audio device) [4|3|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 780d: FCH Azalia Controller

device Bridge (ISA bridge) [6|1|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 780e: FCH LPC Bridge

device Bridge (PCI bridge, Subtractive decode) [6|4|1]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 780f: FCH PCI Bridge

device Serial bus controller (USB controller, OHCI) [c|3|10]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 7809: FCH USB OHCI Controller

   device Hub (Unused, Full speed (or root) hub) [9|0|0]
     vendor 0000: Unknown
     device 0000: Unknown

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1700: Family 12h/14h Processor Function 0

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1701: Family 12h/14h Processor Function 1

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1702: Family 12h/14h Processor Function 2

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1703: Family 12h/14h Processor Function 3

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1704: Family 12h/14h Processor Function 4

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1718: Family 12h/14h Processor Function 6

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1716: Family 12h/14h Processor Function 5

device Bridge (Host bridge) [6|0|0]
  vendor 1022: Advanced Micro Devices, Inc. [AMD]
  device 1719: Family 12h/14h Processor Function 7
~> 

Attachments (1)

syslog falla wifi (120.2 KB ) - added by cmkat 6 months ago.
Syslog AtherosWifi fail

Download all attachments as: .zip

Change History (9)

comment:1 by waddlesplash, 6 months ago

Keywords: atheroswifi wifi removed
Platform: x86-64All
Priority: highnormal

Please attach a syslog.

by cmkat, 6 months ago

Attachment: syslog falla wifi added

Syslog AtherosWifi fail

comment:2 by cmkat, 6 months ago

sorry, epyphany just crash when i did try to send the syslog, but now i sended with dooble and works

comment:3 by waddlesplash, 6 months ago

It looks like your system is running out of memory and can't allocate a contiguous page run anymore. Though admittedly 64 pages is a rather long run.

comment:4 by waddlesplash, 6 months ago

What hrev is this? And if it's not a nightly, please try a nightly build.

comment:5 by waddlesplash, 6 months ago

Please retest after hrev57885.

comment:6 by cmkat, 6 months ago

will try to update and retry, yes i did note when i use epiphany on this minilaptops the wifi crash, when i close epiphany it can reconnect, wiil update and test it again

comment:7 by cmkat, 6 months ago

now i am now on the hrev57903, dont see 1hour 15minutes, and trying to stress the machine (is not hard)will navigate with epiphany and dooble at same time to test it, in some few days will report any news, or when it crash if it do

comment:8 by waddlesplash, 6 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Well, it sounds like the problem is fixed, then. Closing, please let me know if the problem persists.

Note: See TracTickets for help on using tickets.