freebsd_network: Allocate only as large a bounce buffer as is actually needed.

Otherwise we will waste a lot of pages.
May help with #18957.